k8s/ns-dev.yaml
apiVersion: v1
kind: Namespace
metadata:
  name: dev
  labels:
    name: dev
    environment: dev
