k8s/community-service.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: community-service
  namespace: dev
  labels: { app: community-service }
spec:
  replicas: 2
  selector: { matchLabels: { app: community-service } }
  template:
    metadata: { labels: { app: community-service } }
    spec:
      nodeSelector: { "eks.amazonaws.com/nodegroup": "s3j-node-app" }
      containers:
      - name: community-service
        image: ${ECR}/sang3jeom/community-service:latest
        ports: [ { containerPort: 8083 } ]
---
apiVersion: v1
kind: Service
metadata:
  name: community-service
  namespace: dev
  labels: { app: community-service }
spec:
  selector: { app: community-service }
  ports: [ { port: 8083, targetPort: 8083 } ]
  type: ClusterIP
