k8s/order-service.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: order-service
  namespace: dev
  labels: { app: order-service }
spec:
  replicas: 2
  selector: { matchLabels: { app: order-service } }
  template:
    metadata: { labels: { app: order-service } }
    spec:
      nodeSelector: { "eks.amazonaws.com/nodegroup": "s3j-node-app" }
      containers:
      - name: order-service
        image: ${ECR}/sang3jeom/order-service:latest
        ports: [ { containerPort: 8082 } ]
---
apiVersion: v1
kind: Service
metadata:
  name: order-service
  namespace: dev
  labels: { app: order-service }
spec:
  selector: { app: order-service }
  ports: [ { port: 8082, targetPort: 8082 } ]
  type: ClusterIP
