k8s/redis-deploy.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: redis
  namespace: dev
spec:
  replicas: 1
  selector: { matchLabels: { app: redis } }
  template:
    metadata: { labels: { app: redis } }
    spec:
      nodeSelector:
        eks.amazonaws.com/nodegroup: s3j-node-redis
      containers:
      - name: redis
        image: redis:7-alpine
        args: ["--appendonly","no","--save","","--requirepass",""]
        ports: [{ containerPort: 6379 }]
        readinessProbe:
          tcpSocket: { port: 6379 }
          initialDelaySeconds: 10
          periodSeconds: 5
        livenessProbe:
          tcpSocket: { port: 6379 }
          initialDelaySeconds: 20
          periodSeconds: 10
        resources:
          requests: { cpu: "50m", memory: "64Mi" }
          limits:   { cpu: "150m", memory: "192Mi" }
        volumeMounts:
        - name: data
          mountPath: /data
      volumes:
      - name: data
        emptyDir: {}
---
apiVersion: v1
kind: Service
metadata:
  name: redis
  namespace: dev
spec:
  selector: { app: redis }
  ports: [{ port: 6379, targetPort: 6379 }]
  type: ClusterIP
