k8s/review-service.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: review-service
  namespace: dev
  labels: { app: review-service }
spec:
  replicas: 2
  selector: { matchLabels: { app: review-service } }
  template:
    metadata: { labels: { app: review-service } }
    spec:
      nodeSelector: { "eks.amazonaws.com/nodegroup": "s3j-node-app" }
      containers:
      - name: review-service
        image: ${ECR}/sang3jeom/image-service:latest
        ports: [ { containerPort: 8084 } ]
---
apiVersion: v1
kind: Service
metadata:
  name: review-service
  namespace: dev
  labels: { app: review-service }
spec:
  selector: { app: review-service }
  ports: [ { port: 8084, targetPort: 8084 } ]
  type: ClusterIP
